fixed home menu behind video

--- a/src/styles/Menu.scss
+++ b/src/styles/Menu.scss
@@ -5,7 +5,7 @@
     border-top: none;
     border-bottom: none;
     background: white;
-    z-index: 1;
+    z-index: 3;
     overflow: hidden;
     max-height: 0px;
 
@@ -13,6 +13,7 @@
         margin: 1em 0;
         text-decoration: none;
         color: black;
+        z-index: 4;
     }
 }
 
